<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/blue"
    tools:context=".student_login_page">

    <!-- ID EditText -->
    <EditText
        android:id="@+id/editTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_hint"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginBottom="16dp"/>

    <!-- Password EditText -->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_marginBottom="24dp"/>

    <!-- Login Button -->
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@color/yellow"
        android:layout_marginBottom="16dp"/>

    <!-- New Account Button -->
    <Button
        android:id="@+id/buttonNewAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/new_account"/>
</LinearLayout>
